respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condiciones__c</fullName>
        <label>Condiciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customs Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folio_Mkt__c</fullName>
        <label>Folio Mkt</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto_Aproximado__c</fullName>
        <label>Monto Aproximado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Secret__c</fullName>
        <label>Other Secret</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puesto__c</fullName>
        <label>Puesto</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QQ_Messaging_Service__c</fullName>
        <label>Messaging Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refemp_cont__c</fullName>
        <inlineHelpText>Solo aplica a Contactos de Referencia Proveedor</inlineHelpText>
        <label>Referencia-Empresa donde Labora</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Registered_Name__c</fullName>
        <label>Self Registered Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipcon_cont__c</fullName>
        <label>Tipo de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto Comercial</fullName>
                    <default>true</default>
                    <label>Contacto Comercial</label>
                </value>
                <value>
                    <fullName>Encargado de Pagos</fullName>
                </value>
                <value>
                    <fullName>Encargado de Devoluciones</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Referencias Comerciales de Clientes</fullName>
                </value>
                <value>
                    <fullName>Referencias Comerciales de Proveedores</fullName>
                </value>
                <value>
                    <fullName>Representante de Operación</fullName>
                </value>
                <value>
                    <fullName>Representante de Cotizacion</fullName>
                </value>
                <value>
                    <fullName>Representante Administrativo</fullName>
                </value>
                <value>
                    <fullName>Contacto de Origen</fullName>
                </value>
                <value>
                    <fullName>Contacto de Destino</fullName>
                </value>
                <value>
                    <fullName>Responsable de encuestas</fullName>
                </value>
                <value>
                    <fullName>Persona de contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sansancard__CreatedByScanToSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Scan to Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>Contactos_MKT</fullName>
        <columns>Folio_Mkt__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account.Record_Type_Name__c</field>
            <operation>contains</operation>
            <value>MKT</value>
        </filters>
        <label>Contactos MKT</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>